Reetan.Nayak Dev 25/force-app/main/default/objects/dca_cnvrt_note__Convert_Notes_to_ContentNotes_Log__c/dca_cnvrt_note__Convert_Notes_to_ContentNotes_Log__c.object-meta.xml
<CustomObject>
    <description>When deployed as a managed package then users cannot see errors logged to the Debug Log. This object stores any errors and messages the Adminsitrator may need to know about when troubleshooting conversion issues. You may delete these records after you have reviewed them.</description>
    <label>Convert Notes to Enhanced Notes Log</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Convert Notes to Enhanced Notes Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>