Reetan.Nayak Dev 25/force-app/main/default/objects/dca_cnvrt_note__Convert_Notes_to_ContentNotes_Log__c/fields/dca_cnvrt_note__Job_ID__c.field-meta.xml
<CustomField>
    <fullName>dca_cnvrt_note__Job_ID__c</fullName>
    <description>The Batchable or Queueable Job ID when this error occurred.</description>
    <inlineHelpText>The Batchable or Queueable Job ID when this error occurred.</inlineHelpText>
    <label>Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>