Reetan.Nayak Dev 25/force-app/main/default/objects/dca_cnvrt_note__Convert_Notes_to_ContentNotes_Log__c/fields/dca_cnvrt_note__Log_Time__c.field-meta.xml
<CustomField>
    <fullName>dca_cnvrt_note__Log_Time__c</fullName>
    <description>In List Views and Reports the standard CreatedDate and LastModifiedDate display only the &quot;date&quot; portion and not the &quot;time&quot;. This formula field is workaround to to view the &quot;date&quot; and &quot;time&quot; together.</description>
    <formula>CreatedDate</formula>
    <label>Log Time</label>
    <type>DateTime</type>
</CustomField>