Reetan.Nayak Dev 25/force-app/main/default/objects/dca_cnvrt_note__Convert_Notes_to_ContentNotes_Log__c/fields/dca_cnvrt_note__Old_Note_ID__c.field-meta.xml
<CustomField>
    <fullName>dca_cnvrt_note__Old_Note_ID__c</fullName>
    <description>If the log message is about a specific conversion issue with a record then this is the original Note ID.</description>
    <inlineHelpText>If the log message is about a specific conversion issue with a record then this is the original Note ID.</inlineHelpText>
    <label>Old Note ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>