Reetan.Nayak Dev 25/force-app/main/default/objects/dca_cnvrt_note__Convert_Notes_to_ContentNotes_Log__c/fields/dca_cnvrt_note__Summary__c.field-meta.xml
<CustomField>
    <fullName>dca_cnvrt_note__Summary__c</fullName>
    <label>Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>