Reetan.Nayak Dev 25/force-app/main/default/objects/dca_cnvrt_note__Convert_Notes_to_ContentNotes_Log__c/listViews/dca_cnvrt_note__Converted.listView-meta.xml
<ListView>
    <fullName>dca_cnvrt_note__Converted</fullName>
    <columns>NAME</columns>
    <columns>dca_cnvrt_note__Status__c</columns>
    <columns>dca_cnvrt_note__Summary__c</columns>
    <columns>dca_cnvrt_note__Detail__c</columns>
    <columns>dca_cnvrt_note__Log_Time__c</columns>
    <columns>dca_cnvrt_note__Old_Note_ID__c</columns>
    <columns>dca_cnvrt_note__New_Note_ID__c</columns>
    <columns>dca_cnvrt_note__Job_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>dca_cnvrt_note__Status__c</field>
        <operation>equals</operation>
        <value>CONVERTED</value>
    </filters>
    <label>Converted</label>
</ListView>